packages/@zenithui/time-picker/src/index.css
/**
  Styles for time-picker.tsx with Light & Dark Theme Support
*/

/* Theme Variables */
:root {
  --zenithui-time-picker-bg: white;
  --zenithui-time-picker-text: #0f172a;
  --zenithui-time-picker-border: #e2e8f0;
  --zenithui-time-picker-hover-bg: #e2e8f0;
  --zenithui-time-picker-focus-outline: #075985;
  --zenithui-time-picker-disabled-bg: #e5e7eb;
  --zenithui-time-picker-disabled-text: #6b7280;
  --zenithui-time-picker-selected-bg: #0369a1;
  --zenithui-time-picker-selected-hover: #075985;
  --zenithui-time-picker-shadow: rgba(0, 0, 0, 0.15);
  --zenithui-time-picker-scrollbar: #cbd5e1;
}

/* Dark Mode */
.dark {
  --zenithui-time-picker-bg: #18181b;
  --zenithui-time-picker-text: white;
  --zenithui-time-picker-border: #334155;
  --zenithui-time-picker-hover-bg: #475569;
  --zenithui-time-picker-focus-outline: #0369a1;
  --zenithui-time-picker-disabled-bg: #64748b;
  --zenithui-time-picker-disabled-text: #94a3b8;
  --zenithui-time-picker-selected-bg: #0284c7;
  --zenithui-time-picker-selected-hover: #0369a1;
  --zenithui-time-picker-shadow: rgba(255, 255, 255, 0.1);
  --zenithui-time-picker-scrollbar: #64748b;
}

/* Button */
.zenithui-time-trigger {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  max-width: 10rem;
  border: 1px solid var(--zenithui-time-picker-border);
  background-color: var(--zenithui-time-picker-bg);
  padding: 0.5rem 1rem;
  font-size: 0.875rem;
  color: var(--zenithui-time-picker-text);
  border-radius: 0.375rem;
  transition: all 0.3s ease-in-out;
  cursor: pointer;
}

/* Hover state */
.zenithui-time-trigger:hover {
  border-color: var(--zenithui-time-picker-hover-bg);
  background-color: var(--zenithui-time-picker-hover-bg);
}

/* Active state */
.zenithui-time-trigger:active {
  border: 1px solid var(--zenithui-time-picker-border);
  outline: none;
}

/* Focus state */
.zenithui-time-trigger:focus,
.zenithui-time-trigger:focus-visible {
  outline: 1px solid var(--zenithui-time-picker-focus-outline);
}

/* Disabled state */
.zenithui-time-trigger:disabled {
  cursor: not-allowed;
  background-color: var(--zenithui-time-picker-disabled-bg);
  color: var(--zenithui-time-picker-disabled-text);
  opacity: 0.5;
}

/* Disabled hover state */
.zenithui-time-trigger:disabled:hover {
  background-color: var(--zenithui-time-picker-disabled-bg);
  color: var(--zenithui-time-picker-disabled-text);
}

/* Popover content */
.zenithui-time-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  justify-items: center;
  height: 20rem;
  width: 15rem;
  gap: 0.25rem;
  overflow: hidden;
  border-radius: 0.375rem;
  padding: 0.75rem 0;
  border: 1px solid var(--zenithui-time-picker-border);
  background-color: var(--zenithui-time-picker-bg);
}

.zenithui-time-custom-scroll {
  height: 100%;
  overflow-y: auto;
}

/* Time Scroll Container */
.zenithui-time-scroll-container {
  pointer-events: auto;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  padding: 0.25rem;
}

/* Time Item */
.zenithui-time-item {
  height: 3rem;
  width: 3rem;
  transition: all 0.2s ease-in-out;
  background-color: var(--zenithui-time-picker-bg);
  color: var(--zenithui-time-picker-text);
  border: 1px solid var(--zenithui-time-picker-border);
  border-radius: 0.375rem;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.zenithui-time-item:focus,
.zenithui-time-item:focus-visible {
  outline: 2px solid var(--zenithui-time-picker-focus-outline);
}

/* Selected state */
.zenithui-time-item.zenithui-selected {
  background-color: var(--zenithui-time-picker-selected-bg);
  color: white;
}

/* Hover state for selected item */
.zenithui-time-item.zenithui-selected:hover {
  background-color: var(--zenithui-time-picker-selected-hover);
}

.zenithui-time-item.zenithui-selected:focus,
.zenithui-time-item.zenithui-selected:focus-visible {
  outline: 2px solid var(--zenithui-time-picker-border);
}

/**
  Global styles for scrollbar
*/

/* Scrollbar */
.zenithui-time-custom-scroll {
  scrollbar-width: thin;
  /* scrollbar-color: var(--zenithui-time-picker-scrollbar) transparent; */
}

.zenithui-time-custom-scroll::-webkit-scrollbar-thumb {
  scrollbar-width: thin;
  /* background: var(--zenithui-time-picker-scrollbar); */
}

.zenithui-time-custom-scroll::-webkit-scrollbar-track {
  background: transparent;
}

.count-down-text {
  color: var(--zenithui-time-picker-text);
}

